# type_gl

./: Cargo.toml
shader/: simple-fs.glsl.fs  simple-vs.glsl.vs
src/: main.rs  mesh.rs  shader.rs
