[package]
name = "type_gl"
version = "0.1.0"
authors = ["wangyongqin <wangyongqin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.41"
luminance-derive = "0.6"
luminance-windowing = "0.9"
luminance-glfw = "0.13"
luminance-front = { version = "*", no-default-features = true, features = ["gl33"] }
glfw = "0.39"
cgmath = "0.17"